# git-github-actions-mcp-server

./: .env.example  .gitignore  README.md  mcp-config.example.json  mcp-config.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
github_git_mcp/: __init__.py  __main__.py  server.py
